Fixed secuity config